--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+  --green-dark: "#2C3639";
+  --green-light: "#3F4E4F";
+  --beige-light: "#DCD7C9";
+  --brown: "#A27B5C";
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: var(--beige-light);
+  color: var(--green-dark);
 }
 
 a {
@@ -20,7 +29,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: var(--beige-light);
+    background: var(--green-dark);
   }
 }
