--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,35 +1,3 @@
-:root {
-  --green-dark: "#2C3639";
-  --green-light: "#3F4E4F";
-  --beige-light: "#DCD7C9";
-  --brown: "#A27B5C";
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: var(--beige-light);
-  color: var(--green-dark);
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: var(--beige-light);
-    background: var(--green-dark);
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
